Add MapVsFlatMap using flux